<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoApp.ToDoActivity"
    android:background="@color/todo_background_todoapp"
    >

    <TextView
        android:id="@+id/tvAdarle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="44dp"/>

        <TextView
            android:id="@+id/tvCategoria"
            app:layout_constraintTop_toBottomOf="@id/tvAdarle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_category"
            android:textColor="@color/todo_subtitle_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoria"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/tvTareas"
        app:layout_constraintTop_toBottomOf="@id/rvCategoria"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_tareas"
        android:textColor="@color/todo_subtitle_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTareas"
        android:layout_marginVertical="16dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/todo_accent"
        android:src="@drawable/ic_plus"
        app:tint="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>